# analyzeBRfunds

./: FinancialMetrics.py  README.md  SelectingFunds.ipynb  Tutorial_de_uso.ipynb  analise_captacoes.ipynb  finance_theme.mplstyle  pyproject.toml
metrics/: FinancialMetrics.py  usingFinancialMetrics.ipynb
preprocess/: DataClean.py  DataDownload.py
utils/: DataDownload.py  finance_theme.mplstyle  usando.ipynb
